[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/game_graph/editor/dialogs/GameGraphWindowDialogNewDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/game_graph/assets/icon_load.svg" type="Texture" id=2]
[ext_resource path="res://addons/game_graph/editor/GameGraphEditor.gd" type="Script" id=3]
[ext_resource path="res://addons/game_graph/assets/icon_save.svg" type="Texture" id=5]
[ext_resource path="res://addons/game_graph/editor/dialog_list/GameGraphEditorDialogList.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/game_graph/editor/graph/GameGraphGraphEdit.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/game_graph/editor/graph/nodes/GameGraphModalEditDialogLine.tscn" type="PackedScene" id=8]

[node name="GameGraphEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="VBoxContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Toolbar" type="HBoxContainer" parent="TabContainer/Dialog"]
margin_right = 1016.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Load" type="ToolButton" parent="TabContainer/Dialog/Toolbar"]
margin_right = 28.0
margin_bottom = 24.0
icon = ExtResource( 2 )

[node name="Save" type="ToolButton" parent="TabContainer/Dialog/Toolbar"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 24.0
icon = ExtResource( 5 )

[node name="Main" type="HSplitContainer" parent="TabContainer/Dialog"]
margin_top = 28.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_vertical = 3

[node name="DialogList" parent="TabContainer/Dialog/Main" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 536.0

[node name="MainContainer" type="VBoxContainer" parent="TabContainer/Dialog/Main"]
margin_right = 1016.0
margin_bottom = 536.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="GraphEdit" parent="TabContainer/Dialog/Main/MainContainer" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 804.0
margin_bottom = 268.0

[node name="NoDialog" type="CenterContainer" parent="TabContainer/Dialog/Main/MainContainer"]
margin_right = 1016.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Dialog/Main/MainContainer/NoDialog"]
margin_left = 446.0
margin_top = 252.0
margin_right = 569.0
margin_bottom = 283.0
text = "No dialog yet
click the 'New' icon"
align = 1

[node name="Console" type="TextEdit" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 100 )
minimap_draw = true
minimap_width = 60
__meta__ = {
"_editor_description_": ""
}

[node name="PopupMenu" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -35.0
margin_right = 75.0
margin_bottom = 35.0
rect_min_size = Vector2( 150, 0 )
items = [ "dialog", null, 0, false, false, 1, 0, null, "", false, "choice", null, 0, false, false, 2, 0, null, "", false, "event", null, 0, false, false, 3, 0, null, "", false ]

[node name="SaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -206.0
margin_right = 291.5
margin_bottom = 206.0
resizable = true
filters = PoolStringArray( "*.tres", "*.res" )

[node name="LoadDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -208.5
margin_right = 291.5
margin_bottom = 208.5
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.tres", "*.res" )

[node name="WindowDialog" parent="." instance=ExtResource( 1 )]
visible = false

[node name="WindowDialogLineEditor" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="pressed" from="TabContainer/Dialog/Toolbar/Load" to="." method="_on_Toolbar_Load_resource_pressed"]
[connection signal="pressed" from="TabContainer/Dialog/Toolbar/Save" to="." method="_on_Toolbar_Save_resource_pressed"]
[connection signal="dialog_created" from="TabContainer/Dialog/Main/DialogList" to="." method="_on_DialogList_dialog_created"]
[connection signal="dialog_deleted" from="TabContainer/Dialog/Main/DialogList" to="." method="_on_DialogList_dialog_deleted"]
[connection signal="dialog_selected" from="TabContainer/Dialog/Main/DialogList" to="." method="_on_DialogList_dialog_selected"]
[connection signal="connection_to_empty" from="TabContainer/Dialog/Main/MainContainer/GraphEdit" to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="dialog_line_edited" from="TabContainer/Dialog/Main/MainContainer/GraphEdit" to="." method="_on_GraphEdit_dialog_line_edited"]
[connection signal="popup_request" from="TabContainer/Dialog/Main/MainContainer/GraphEdit" to="." method="_on_GraphEdit_popup_request"]
[connection signal="focus_exited" from="PopupMenu" to="." method="_on_PopupMenu_focus_exited"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_LoadDialog_file_selected"]
[connection signal="key_requested" from="WindowDialog" to="." method="_on_WindowDialog_key_requested"]
[connection signal="new_dialog_submitted" from="WindowDialog" to="." method="_on_WindowDialog_new_dialog_submitted"]
